--- a/planning.html
+++ b/planning.html
@@ -155,7 +155,16 @@
                 IV a planning process developed with and for faculty members. 
                 <br><div id="smallestBreak"></div>
                 <a href="./PDFS/Civic Prompts.pdf" target="_blank">Reference Document</a>
+                <br><br><br>
+                <span id= "highlighted-text">General Education and Democratic Engagement:</span>&nbsp;Examples of Fostering Civic Capacities Through General Education Requirements
+                <br><div id="smallestBreak"></div>
+                <a href="./PDFS/General Education and Demoratic Engagement - Diversity and Democracy - Summer 2014.pdf" target="_blank">Reference Document</a>
+                <br><br><br>
+                <span id= "highlighted-text">Civic Learning in the Major By Design:</span>&nbsp;Examples Showing How Different Disciplines Foster Civic Engagement
+                <br><div id="smallestBreak"></div>
+                <a href="https://d38xzozy36dxrv.cloudfront.net/qa/content/user-photos/Offices/GC4/PR_FA17_Vol19No4.pdf" target="_blank">Reference Document</a>
                 <br><br>
+
         </div>
     </div>
 
