--- a/contactus.html
+++ b/contactus.html
@@ -58,7 +58,7 @@
                 <div><input type="button" class="button" id="aboutButton" value="ABOUT" onclick="window.location.href='about'"></div>
                 <div><input type="button" class="button" id="sharedButton" value="SHARED COMMITMENT STATEMENT"onclick="window.location.href='sharedcommitment'"></div>
                 <div><input type="button" class="button" id="partnersButton" value="PARTNERS" onclick="window.location.href='ourpartners'"></div>
-                <div><input type="button" class="button" id="takeActionButton" value="TAKE ACTION"onclick="window.location.href='takeaction'"></div>
+                <div><input type="button" class="button" id="takeActionButton" value="CLDE IN ACTION"onclick="window.location.href='takeaction'"></div>
                 <div><input type="button" class="button" id="contactButton" value="CONTACT US"onclick="window.location.href='contactus'"></div>
              </div>
             </div> 
@@ -110,7 +110,7 @@
                     </li>
                     <br>
                     <li>
-                        <a id="takeaction-mobile" href="takeaction">TAKE ACTION</a>
+                        <a id="takeaction-mobile" href="takeaction">CLDE IN ACTION</a>
                     </li>
                             <li id="smallerList">
                                 <a id="cldebydesign-mobile" href="cldebydesign">CLDE BY DESIGN</a>
