--- a/ourpartners.html
+++ b/ourpartners.html
@@ -151,6 +151,8 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">American Association of Colleges for Teacher Education</span> <br>Lynn M. Gangone, President and CEO
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">American Council on Education</span> <br>Ted Mitchell, President
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">American Political Science Association</span> <br>Steven R. Smith, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Asian & Pacific Islander American Scholarship Fund (APIA)</span> <br>Noel Harmon, President
