--- a/ourpartners.html
+++ b/ourpartners.html
@@ -159,7 +159,9 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Bringing Theory to Practice</span> <br>David Scobey, Director
         <br><div id="smallBreak"></div>
-        <span id="highlighted-text">Campus Compact</span> <br>Maggie Grove, Interim President
+        <span id="highlighted-text">Campus Compact</span> <br>Bobbie Laur, President
+        <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Campus Compact Mid-Atlantic</span> <br>Madeline Yates, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Center for Community College Student Engagement</span> <br>Linda Garcia, Executive Director
         <br><div id="smallBreak"></div>
@@ -178,6 +180,8 @@
         <span id="highlighted-text">ECMC Foundation</span> <br>Peter Taylor, President
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">ETS</span> <br>Walt MacDonald, President and CEO
+        <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Engage NJ</span> <br>Saul Petersen, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Excelencia in Education</span> <br>Sarita Brown, President
         <br><div id="smallBreak"></div>
@@ -200,6 +204,8 @@
         <span id="highlighted-text">Jonathan M. Tisch College of Civic Life, Tufts University</span> <br>Dayna Cunningham, Pierre and Pamala Omidyar Dean
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Karsh Institute of Democracy, University of Virginia</span> <br>Melody C. Barnes, Executive Director
+        <br><div id="smallBreak"></div>
+        <span id="highlighted-text">LEAD California</span> <br>Elaine Ikeda, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">League for Innovation in the Community College</span> <br>Rufus Glasper, President and CEO
         <br><div id="smallBreak"></div>
@@ -248,6 +254,8 @@
         <span id="highlighted-text">University Innovation Alliance</span> <br>Bridget Burns, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">University System of Maryland</span> <br>Jay Perman, Chancellor
+        <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Utah System of Higher Education</span> <br>Dave R. Woolstenhulme, Commissioner
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">WASC Senior College and University Commission</span> <br>Jamienne S. Studley, President
         <br>
