--- a/index.html
+++ b/index.html
@@ -162,6 +162,15 @@
         <div id="spotlightInfoBox">
             <span id="spotlightHeader">SPOTLIGHT</a></span>
             <br><br>
+            <a id="spotlightText" href="/PDFS/The CLDE Coalition - Goals and Priorities 042622.pdf" target = ”_blank>
+                CLDE Coalition Releases  New Briefing Paper on CLDE’s Purposes,
+                Partnerships, and Vision for Students Democracy Learning
+               <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+                <span id="dateandsource">
+                April, 2022          
+                </span>
+                <br><br>
+                <div id="smallestBreak"></div><div id="smallestBreak"></div>
             <a id="spotlightText" href="/PDFS/Utah State System Joins Civic Evidence Project.pdf" target = ”_blank>
             Utah State System of HIgher Education Joins CLDE-Affiliated Project to Assess Students' Gains in Civic Learning</a>
             <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
@@ -180,10 +189,7 @@
             <br><br><div id="smallestBreak"></div><div id="smallestBreak"></div>
             <a id="spotlightText" href="https://www.aacu.org/press/press-releases/aacu-announces-eighteen-institutions-selected-participate-new-project-advance" target = ”_blank>
             18 Institutions Selected for CLDE-Affiliated Project to Study Students’ Gains from Community-Engaged Learning
-            </a>
-            <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
-            <span id="dateandsource">
-            January 19-21             
+            </a>          
             </span>
             <br><br>
             <div id="smallestBreak"></div><div id="smallestBreak"></div>
