--- a/leadership.html
+++ b/leadership.html
@@ -157,15 +157,21 @@
             <span id="highlighted-text">Martha Kanter</span>,<br>CEO, College Promise and Under Secretary, U.S. Department of Education (2009-2013);
             former Chancellor of the Foothill-De Anza Community College District
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">Ashley Finley</span>,<br>Vice President for Research and Senior Advisor to the President, AAC&U
+            <span id="highlighted-text">Ashley Finley</span>,<br>Vice President for Research and Senior Advisor to the President, American Association of Colleges and Universities
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">Tom Harnisch</span>,<br>Vice President for Government Relations, State Higher Education Executive
-            Officers Association (SHEEO)
+            <span id="highlighted-text">Charles Ansell</span>,<br>Vice Preident for Research, Policy, and Advocacy
+            Complete College America    
+            <br><div id="smallBreak"></div>   
+            <span id="highlighted-text">Tom Harnisch</span>,<br>Vice President for Government Relations, State Higher Education Executive Officers Association
+            <br><div id="smallBreak"></div>
+            <span id="highlighted-text">John Lane</span>,<br>Vice President for Academic Affairs and Equity Initiatives, State Higher Education Executive Officers
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Lenore Rodicio</span>,<br>Senior Fellow, The Aspen Institute College Excellence Program, and former
             Executive Vice President and Provost, Miami Dade College
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">Carol Geary Schneider</span>,<br>Senior Advisor, College Promise and President Emerita, AAC&U
+            <span id="highlighted-text">Carol Geary Schneider</span>,<br>Senior Advisor, Civic Learning and Democracy Engagement, and President Emerita, AAC&U
+            <br><div id="smallBreak"></div>
+            <span id="highlighted-text">David Paris</span>,<br>Senior Advisor, Senior Advisor, Civic Learning and Democracy Engagement, and Professor Emeritus, Hamilton College
             <br>
         </div>
     </div>  
