--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <br><br>
             <a id="spotlightText" href="/PDFS/The CLDE Coalition - Goals and Priorities 042622.pdf" target = ”_blank>
                 CLDE Coalition Releases  New Briefing Paper on CLDE’s Purposes,
-                Partnerships, and Vision for Students Democracy Learning
+                Partnerships, and Vision for Students' Democracy Learning
                <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
                 <span id="dateandsource">
                 April, 2022          
