--- a/leadership.html
+++ b/leadership.html
@@ -159,7 +159,7 @@
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Ashley Finley</span>,<br>Vice President for Research and Senior Advisor to the President, American Association of Colleges and Universities
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">Charles Ansell</span>,<br>Vice Preident for Research, Policy, and Advocacy
+            <span id="highlighted-text">Charles Ansell</span>,<br>Vice Preidents for Research, Policy, and Advocacy,
             Complete College America    
             <br><div id="smallBreak"></div>   
             <span id="highlighted-text">Tom Harnisch</span>,<br>Vice President for Government Relations, State Higher Education Executive Officers Association
@@ -171,7 +171,7 @@
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Carol Geary Schneider</span>,<br>Senior Advisor, Civic Learning and Democracy Engagement, and President Emerita, AAC&U
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">David Paris</span>,<br>Senior Advisor, Senior Advisor, Civic Learning and Democracy Engagement, and Professor Emeritus, Hamilton College
+            <span id="highlighted-text">David Paris</span>,<br>Senior Advisor, Senior Advisor, Civic Learning and Democracy Engagement, and Professor of Government Emeritus, Hamilton College  
             <br>
         </div>
     </div>  
