--- a/index.html
+++ b/index.html
@@ -162,12 +162,11 @@
         <div id="spotlightInfoBox">
             <span id="spotlightHeader">SPOTLIGHT</a></span>
             <br><br>
-            <a id="spotlightText" href="/PDFS/The CLDE Coalition - Goals and Priorities 042622.pdf" target = ”_blank>
-                CLDE Coalition Releases  New Briefing Paper on CLDE’s Purposes,
-                Partnerships, and Vision for Students' Democracy Learning
+            <a id="spotlightText" href="/PDFS/The CLDE Coalition - July 2022 - Goals and Priorities.pdf" target = ”_blank>
+                CLDE Coalition Releases Briefing Paper on CLDE's Purposes, Partnerships, and Vision for Students' Democracy Learning
                <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
                 <span id="dateandsource">
-                April, 2022          
+                July, 2022          
                 </span>
                 <br><br>
                 <div id="smallestBreak"></div><div id="smallestBreak"></div>
