--- a/leadership.html
+++ b/leadership.html
@@ -171,7 +171,7 @@
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Carol Geary Schneider</span>,<br>Senior Advisor, Civic Learning and Democracy Engagement, and President Emerita, AAC&U
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">David Paris</span>,<br>Senior Advisor, Senior Advisor, Civic Learning and Democracy Engagement, and Professor of Government Emeritus, Hamilton College  
+            <span id="highlighted-text">David Paris</span>,<br>Senior Advisor, Civic Learning and Democracy Engagement, and Professor of Government Emeritus, Hamilton College  
             <br>
         </div>
     </div>  
