--- a/advisors.html
+++ b/advisors.html
@@ -145,21 +145,37 @@
             <span id="highlighted-text">Fay Akindes</span><br>Director, System-wide Professional and Instructional Development, 
             University of Wisconsin System
             <br><div id="smallBreak"></div>
+            <span id="highlighted-text">Charles Ansell</span><br>Vice President for Research, Policy, and Advocacy
+            Complete College America (CCA); former Chief Operating Officer, Community College System of New Hampshire            
+            <br><div id="smallBreak"></div>
+            <span id="highlighted-text">Ronald Crutcher</span><br>President Emeritus and University Professor,
+            University of Richmond; President Emeritus, Wheaton College (MA)                       
+            <br><div id="smallBreak"></div>
             <span id="highlighted-text">Jodi Fisler</span><br>Senior Associate for Assessment Policy & Analysis 
             at the State Council of Higher Education for Virginia (SCHEV)
             <br><div id="smallBreak"></div>
+            <span id="highlighted-text">Richard M. Freeland</span><br>Former Commissioner of Higher Education for Massachusetts; 
+            President Emeritus of Northeastern University; Senior Advisor to CLDE  
+            <br><div id="smallBreak"></div>
             <span id="highlighted-text">Ari Hoy</span><br> Vice President for Program and Resource Development at the Bonner Foundation
             <br><div id="smallBreak"></div>
+            <span id="highlighted-text">John Lane</span><br> Vice President for Academic Affairs and Equity Initiatives,
+            State Higher Education Executive Officers (SHEEO            
+            <br><div id="smallBreak"></div>
             <span id="highlighted-text">Mary Beth Love</span><br> Executive Director, Metro Student Success Program and Professor of Public Health,
-            San Francisco State University            
+            San Francisco State University       
+            <br><div id="smallBreak"></div>
+            <span id="highlighted-text">David Paris</span><br> Professor of Government, Emeritus, Hamilton College; Senior Advisor to CLDE
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">David Scobey</span><br>Director of Bringing Theory to Practice (BTtoP)
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Carol Geary Schneider</span><br>President Emerita, American Association of Colleges and Universities,
             Senior Advisor for Quality and Civic Learning, College Promise; Consultant for Quality and Equity, Lumina Foundation
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">Dawn Whitehead</span><br> Vice President, Global Citizenship for Campus, Community and Careers,
-            AAC&U
+            <span id="highlighted-text">Dawn Whitehead</span><br>Vice President, Global Citizenship for Campus, Community and Careers, American Association of Colleges and Universities
+            <br><div id="smallBreak"></div>
+            <span id="highlighted-text">Falecia D. Williams</span><br>President, Prince George’s Community College, and former President of Valencia College’s West and Downtown Campuses. 
+            
             <br>
         </div>
     </div>
