--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <div id="pageContent">
         <div id="textBox-main">
-            The American Association of Colleges and Universities, State Higher Education Executive Officers,
+            The American Association of Colleges and Universities, State Higher Education Executive Officers, Campus Compact, 
             Complete College America, and College Promise invite you to join in making Civic Learning 
             and Democracy Engagement (CLDE) part of every student’s postsecondary learning &#8211; in ways 
             related to students’ career and life choices.
@@ -162,14 +162,23 @@
         <div id="spotlightInfoBox">
             <span id="spotlightHeader">SPOTLIGHT</a></span>
             <br><br>
+            <div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <a id="spotlightText" href="/PDFS/CLDE Coalition Receives Grant for Planning and Action Forums - July 20.pdf" target = ”_blank>
+            CLDE Coalition Receives Grant to Accelerate College Students’ Democracy Learning and Engagement, With Policy Leaders and Campus Educators at the Helm
+            <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <span id="dateandsource">
+            July 20, 2022     
+            </span>
+            <br><br>  
+            <div id="smallestBreak"></div><div id="smallestBreak"></div>
             <a id="spotlightText" href="/PDFS/The CLDE Coalition - July 2022 - Goals and Priorities.pdf" target = ”_blank>
-                CLDE Coalition Releases Briefing Paper on CLDE's Purposes, Partnerships, and Vision for Students' Democracy Learning
-               <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
-                <span id="dateandsource">
-                July, 2022          
-                </span>
-                <br><br>
-                <div id="smallestBreak"></div><div id="smallestBreak"></div>
+            CLDE Coalition Releases New Briefing Paper on CLDE’s Purposes, Partnerships, and Vision for Students Democracy Learning
+            <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
+            <span id="dateandsource">
+            April, 2022          
+            </span>
+            <br><br>
+            <div id="smallestBreak"></div><div id="smallestBreak"></div>
             <a id="spotlightText" href="/PDFS/Utah State System Joins Civic Evidence Project.pdf" target = ”_blank>
             Utah State System of HIgher Education Joins CLDE-Affiliated Project to Assess Students' Gains in Civic Learning</a>
             <br><div id="smallestBreak"></div><div id="smallestBreak"></div>
