--- a/ourpartners.html
+++ b/ourpartners.html
@@ -143,6 +143,8 @@
        <div id="headerbox3">Shared Commitment Signatories and Partners</div>
        <span id="bottomBorder"></span>
        <div id="textBox">
+        <span id="highlighted-text">Accrediting Commission for Community and Junior Colleges (AACJC)</span> <br>Mac Powell, President
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">Achieving the Dream (AtD)</span> <br>Karen Stout, President and CEO
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">ALL IN Campus Democracy Challenge</span> <br>Jennifer Domagal-Goldman, Executive Director
