--- a/leadership.html
+++ b/leadership.html
@@ -157,6 +157,8 @@
             <span id="highlighted-text">Martha Kanter</span>,<br>CEO, College Promise and Under Secretary, U.S. Department of Education (2009-2013);
             former Chancellor of the Foothill-De Anza Community College District
             <br><div id="smallBreak"></div>
+            <span id="highlighted-text">Bobbie Laur</span>,<br>President, Campus Compact
+            <br><div id="smallBreak"></div>
             <span id="highlighted-text">Ashley Finley</span>,<br>Vice President for Research and Senior Advisor to the President, American Association of Colleges and Universities
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Charles Ansell</span>,<br>Vice Preidents for Research, Policy, and Advocacy,
