--- a/advisors.html
+++ b/advisors.html
@@ -148,6 +148,8 @@
             <span id="highlighted-text">Charles Ansell</span><br>Vice President for Research, Policy, and Advocacy
             Complete College America (CCA); former Chief Operating Officer, Community College System of New Hampshire            
             <br><div id="smallBreak"></div>
+            <span id="highlighted-text">Melody Barnes</span><br>Executive Director, UVA Karsh Institute of Democracy        
+            <br><div id="smallBreak"></div>
             <span id="highlighted-text">Ronald Crutcher</span><br>President Emeritus and University Professor,
             University of Richmond; President Emeritus, Wheaton College (MA)                       
             <br><div id="smallBreak"></div>
@@ -164,6 +166,10 @@
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Mary Beth Love</span><br> Executive Director, Metro Student Success Program and Professor of Public Health,
             San Francisco State University       
+            <br><div id="smallBreak"></div>
+            <span id="highlighted-text">Ted McConnell</span><br> Executive Director, Campaign for the Civic Mission of Schools
+            <br><div id="smallBreak"></div>
+            <span id="highlighted-text">Caryn McTighe Musil</span><br> Distinguished Fellow, American Association of Colleges & Universities and National Field Leader, Bonner Foundation
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">David Paris</span><br> Professor of Government, Emeritus, Hamilton College; Senior Advisor to CLDE
             <br><div id="smallBreak"></div>
