--- a/macroinitiatives.html
+++ b/macroinitiatives.html
@@ -175,11 +175,8 @@
                 <a href="./PDFS/Fisler.pdf" target="_blank">Reference Document</a>
                 <br><br><br>
                 <span id= "highlighted-text">State of Florida:</span>&nbsp;</a>
-                Since 2019, Governor Ron DeSantis, the state legislature, and the 
-                Department of Education have worked together to strengthen students' civic learning in both K-12 and postsecondary public education, 
-                including career programs.
-                <br><div id="smallestBreak"></div>
-                <a href="./PDFS/The State of Florida.pdf" target="_blank">Reference Document</a>
+                The Governor, the state legislature, and the Department of Education have developed <a target="_blank" href="https://www.fldoe.org/policy/articulation/postsec-civics-lit.stml">new standards</a> to 
+                significantly improve students' civic learning in both K-12 and postsecondary public education, including associate degrees and career-related programs.
                 <br><br><br>
                 <span id= "highlighted-text">State of Maryland:&nbsp;University System of Maryland (USMD)</span>
                Since 2017, USMD has been working at the system and campus level to advance students' civic engagement and learning accross public higher education.” 
