--- a/ourpartners.html
+++ b/ourpartners.html
@@ -161,6 +161,8 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Bringing Theory to Practice</span> <br>David Scobey, Director
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Campaign for the Civic Mission of Schools</span> <br>Ted McConnell, Executive Director
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">Campus Compact</span> <br>Bobbie Laur, President
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Campus Compact Mid-Atlantic</span> <br>Madeline Yates, Executive Director
