--- a/ourpartners.html
+++ b/ourpartners.html
@@ -149,6 +149,8 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">ALL IN Campus Democracy Challenge</span> <br>Jennifer Domagal-Goldman, Executive Director
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Allegany College of Maryland</span> <br>Dr. Cynthia S. Bambara, President
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">Anchor Institutions Task Force</span> <br>David J. Maurrasse, Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">American Association of Colleges for Teacher Education</span> <br>Lynn M. Gangone, President and CEO
