--- a/leadership.html
+++ b/leadership.html
@@ -161,7 +161,7 @@
             <br><div id="smallBreak"></div>
             <span id="highlighted-text">Ashley Finley</span>,<br>Vice President for Research and Senior Advisor to the President, American Association of Colleges and Universities
             <br><div id="smallBreak"></div>
-            <span id="highlighted-text">Charles Ansell</span>,<br>Vice Preidents for Research, Policy, and Advocacy,
+            <span id="highlighted-text">Charles Ansell</span>,<br>Vice Preident for Research, Policy, and Advocacy,
             Complete College America    
             <br><div id="smallBreak"></div>   
             <span id="highlighted-text">Tom Harnisch</span>,<br>Vice President for Government Relations, State Higher Education Executive Officers Association
